--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = fill-image-resize
-version = 0.2.1
+version = 1.0.0
 author = Danila Vasilev
 author_email = mail@vasilev.ml
-description = Package provedis function for rather neet image resizing (like Fill resize in Figma)
+description = Package provides function for rather neat image resizing (like Fill resize in Figma)
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/d0ctr/fill-image-resize
