--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   build-n-publish-test:
     name: Build and publish Python 🐍 distributions 📦 to TestPyPI
-    if: startsWith(github.ref, "refs/tags/test-v")
+    if: startsWith(github.ref, 'refs/tags/test-v')
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@master
